@@ -455,6 +455,10 @@ class ModuleIsotopeCheckout extends ModuleIsotope
 	 			{
 	 				$this->Isotope->Cart->Shipping = $objModule;
 	 			}
+	 			
+	 			$fltPrice = $objModule->price;
+	 			$strSurcharge = $objModule->surcharge;
+	 			$strPrice = $fltPrice > 0 ? (($strSurcharge == '' ? '' : ' ('.$strSurcharge.')') . ': '.$this->Isotope->formatPriceWithCurrency($fltPrice)) : '';
 				
 				$arrModules[] = sprintf('<input id="ctrl_shipping_module_%s" type="radio" name="shipping[module]" value="%s"%s /> <label for="ctrl_shipping_module_%s">%s%s</label>%s%s',
 										 $objModule->id,
@@ -462,7 +466,7 @@ class ModuleIsotopeCheckout extends ModuleIsotope
 										 (($this->Isotope->Cart->Shipping->id == $objModule->id || $objModules->numRows==1) ? ' checked="checked"' : ''),
 										 $objModule->id,
 	 									 $objModule->label,
-	 									 ($objModule->price ? ': '.$this->Isotope->formatPriceWithCurrency($objModule->price) : ''),
+	 									 $strPrice,
 	 									 ($objModule->note ? '<div class="clear">&nbsp;</div><br /><div class="shippingNote"><strong>Note:</strong><br />' . $objModule->note . '</div>' : ''),
 	 									 ($objModule->getShippingOptions($objModule->id) ? '<div class="clear">&nbsp;</div><br /><div class="shippingOptions"><strong>Options:</strong><br />' . $objModule->getShippingOptions($objModule->id) . '</div>' : ''));
 	 									 
@@ -572,6 +576,10 @@ class ModuleIsotopeCheckout extends ModuleIsotope
 	 			{
 	 				$strForm = '<div class="payment_data" id="payment_data_' . $objModule->id . '">' . $strForm . '</div>';
 	 			}
+	 			
+	 			$fltPrice = $objModule->price;
+	 			$strSurcharge = $objModule->surcharge;
+	 			$strPrice = $fltPrice > 0 ? (($strSurcharge == '' ? '' : ' ('.$strSurcharge.')') . ': '.$this->Isotope->formatPriceWithCurrency($fltPrice)) : '';
 							
 				$arrModules[] = sprintf('<input id="ctrl_payment_module_%s" type="radio" class="radio payment_module" name="payment[module]" value="%s"%s /> <label for="ctrl_payment_module_%s">%s%s</label>%s',
 										 $objModule->id,
@@ -579,7 +587,7 @@ class ModuleIsotopeCheckout extends ModuleIsotope
 										 (($this->Isotope->Cart->Payment->id == $objModule->id || $objModules->numRows==1) ? ' checked="checked"' : ''),
 										 $objModule->id,
 	 									 $objModule->label,
-	 									 ($objModule->price ? ': '.$this->Isotope->formatPriceWithCurrency($objModule->price) : ''),
+	 									 $strPrice,
 	 									 $strForm);
 	 									 
 	 			$objLastModule = $objModule;
