@@ -5,6 +5,7 @@ Isotope eCommerce Changelog
 Version 0.2.0
 ------------------------------
 - Added label for isotope_rules extension folder
+- Added support for percentage surcharge for payment and shipping price
 - Fixed address validation in checkout module
 
 Version 0.2.rc1 (2010-10-31)
